test/spec_vectors/exports/ok/module_55.wat
(module (export "a" (table 0)) (table 0 funcref))