test/spec_vectors/exports/fail/module_87.wat
(module (memory 0) (table 0 funcref) (export "a" (memory 0)) (export "a" (table 0)))